less styles implemented, jumbotron initialized.

--- a/my-portfolio/src/Styles/less/variables.less
+++ b/my-portfolio/src/Styles/less/variables.less
@@ -1,1 +1,9 @@
-// font colors
+// Media Queries
+
+@phone: ~"(max-width: 600px)";
+
+@tablet: ~"(max-width: 900px)";
+
+@desktop: ~"(max-width: 1200px)";
+
+// colors
