--- a/my-portfolio/src/Styles/css/index.css
+++ b/my-portfolio/src/Styles/css/index.css
@@ -8,3 +8,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+.app .app-container {
+  border: 1px solid red;
+}
+.jumbotron {
+  height: 100vh;
+  width: 100vw;
+  background-color: aqua;
+}
