mountains and waves positioned for giant desktop view

--- a/my-portfolio/src/Styles/less/variables.less
+++ b/my-portfolio/src/Styles/less/variables.less
@@ -1,9 +1,8 @@
 // Media Queries
-
-@phone: ~"(max-width: 600px)";
-
 @tablet: ~"(max-width: 900px)";
 
 @desktop: ~"(max-width: 1200px)";
+
+@giant: ~"(max-width: 1600px)";
 
 // colors
