--- a/my-portfolio/src/Styles/css/index.css
+++ b/my-portfolio/src/Styles/css/index.css
@@ -14,5 +14,51 @@ code {
 .jumbotron {
   height: 100vh;
   width: 100vw;
-  background-color: aqua;
+  overflow: hidden;
+  background-image: linear-gradient(#69C0EB, #C7E1E9);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.jumbotron .scenery {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: relative;
+}
+.jumbotron .scenery .mountains {
+  display: flex;
+  justify-content: center;
+  z-index: 5;
+  margin-top: 200px;
+}
+.jumbotron .scenery .mountains .mtns_left {
+  width: 990px;
+  height: 564px;
+  padding-right: 170px;
+}
+.jumbotron .scenery .mountains .mtns_right {
+  width: 990px;
+  height: 564px;
+  padding-left: 170px;
+}
+.jumbotron .scenery .wave {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: 550px;
+}
+.jumbotron .scenery .lt {
+  top: 720px;
+}
+.jumbotron .scenery .med {
+  top: 730px;
+  padding-left: 25px;
+}
+.jumbotron .scenery .dark {
+  top: 740px;
+  padding-right: 25px;
 }
