--- a/my-portfolio/src/Styles/less/jumbotron.less
+++ b/my-portfolio/src/Styles/less/jumbotron.less
@@ -1,5 +1,59 @@
 .jumbotron {
     height: 100vh;
     width: 100vw;
-    background-color: aqua;
+    overflow: hidden;
+    background-image: linear-gradient(#69C0EB,#C7E1E9);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .scenery {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        position: relative;
+
+        .mountains {
+            display: flex;
+            justify-content: center;
+            z-index: 5;
+            margin-top: 200px;
+
+            .mtns_left {
+                width: 990px;
+                height: 564px;
+                padding-right: 170px;
+            }
+    
+            .mtns_right {
+                width: 990px;
+                height: 564px;
+                padding-left: 170px;
+            }
+        }
+
+        .wave {
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin-left: auto;
+            margin-right: auto;
+            width: 550px;
+        }
+
+        .lt {
+            top: 720px;
+        }
+
+        .med {
+            top: 730px;
+            padding-left: 25px;
+        }
+
+        .dark {
+            top: 740px;
+            padding-right: 25px;
+        }
+    } 
 }
