--- a/my-portfolio/src/Styles/css/index.css
+++ b/my-portfolio/src/Styles/css/index.css
@@ -26,12 +26,14 @@ code {
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
+  align-items: flex-start;
 }
 .jumbotron .scenery .mountains {
   display: flex;
   justify-content: center;
   z-index: 5;
   margin-top: 200px;
+  border: 1px solid orange;
 }
 .jumbotron .scenery .mountains .mtns_left {
   width: 990px;
@@ -61,4 +63,15 @@ code {
 .jumbotron .scenery .dark {
   top: 740px;
   padding-right: 25px;
+}
+.jumbotron .scenery .grass {
+  border: 1px solid red;
+  width: 100%;
+  height: 300px;
+}
+.about-me {
+  width: 100%;
+  height: 900px;
+  border: 1px solid red;
+  background-color: aqua;
 }
