--- a/my-portfolio/src/Styles/less/jumbotron.less
+++ b/my-portfolio/src/Styles/less/jumbotron.less
@@ -13,12 +13,14 @@
         flex-wrap: wrap;
         justify-content: center;
         position: relative;
+        align-items: flex-start;
 
         .mountains {
             display: flex;
             justify-content: center;
             z-index: 5;
             margin-top: 200px;
+            border: 1px solid orange;
 
             .mtns_left {
                 width: 990px;
@@ -54,6 +56,12 @@
         .dark {
             top: 740px;
             padding-right: 25px;
+        }
+
+        .grass {
+            border: 1px solid red;
+            width: 100%;
+            height: 300px;
         }
     } 
 }
