--- a/my-portfolio/src/Styles/css/index.css
+++ b/my-portfolio/src/Styles/css/index.css
@@ -32,8 +32,7 @@ code {
   display: flex;
   justify-content: center;
   z-index: 5;
-  margin-top: 200px;
-  border: 1px solid orange;
+  margin-top: 160px;
 }
 .jumbotron .scenery .mountains .mtns_left {
   width: 990px;
@@ -54,20 +53,31 @@ code {
   width: 550px;
 }
 .jumbotron .scenery .lt {
-  top: 720px;
+  top: 690px;
 }
 .jumbotron .scenery .med {
-  top: 730px;
+  top: 700px;
   padding-left: 25px;
 }
 .jumbotron .scenery .dark {
-  top: 740px;
+  top: 710px;
   padding-right: 25px;
 }
 .jumbotron .scenery .grass {
-  border: 1px solid red;
   width: 100%;
   height: 300px;
+  background-color: #85AB36;
+  z-index: 1;
+  position: relative;
+}
+.jumbotron .scenery .grass .lake {
+  width: 340px;
+  position: absolute;
+  top: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
 .about-me {
   width: 100%;
