--- a/my-portfolio/src/Styles/less/jumbotron.less
+++ b/my-portfolio/src/Styles/less/jumbotron.less
@@ -19,8 +19,7 @@
             display: flex;
             justify-content: center;
             z-index: 5;
-            margin-top: 200px;
-            border: 1px solid orange;
+            margin-top: 160px;
 
             .mtns_left {
                 width: 990px;
@@ -45,23 +44,35 @@
         }
 
         .lt {
-            top: 720px;
+            top: 690px;
         }
 
         .med {
-            top: 730px;
+            top: 700px;
             padding-left: 25px;
         }
 
         .dark {
-            top: 740px;
+            top: 710px;
             padding-right: 25px;
         }
 
         .grass {
-            border: 1px solid red;
             width: 100%;
             height: 300px;
+            background-color: #85AB36;
+            z-index: 1;
+            position: relative;
+
+            .lake {
+                width: 340px;
+                position: absolute;
+                top: 0;
+                margin-left: auto;
+                margin-right: auto;
+                left: 0;
+                right: 0;
+            }
         }
     } 
 }
