--- a/my-portfolio/src/Styles/css/index.css
+++ b/my-portfolio/src/Styles/css/index.css
@@ -31,17 +31,17 @@ code {
 .jumbotron .scenery .mountains {
   display: flex;
   justify-content: center;
-  z-index: 5;
+  z-index: 1;
   margin-top: 160px;
 }
 .jumbotron .scenery .mountains .mtns_left {
   width: 990px;
-  height: 564px;
+  height: 594px;
   padding-right: 170px;
 }
 .jumbotron .scenery .mountains .mtns_right {
   width: 990px;
-  height: 564px;
+  height: 594px;
   padding-left: 170px;
 }
 .jumbotron .scenery .wave {
@@ -67,17 +67,15 @@ code {
   width: 100%;
   height: 300px;
   background-color: #85AB36;
-  z-index: 1;
-  position: relative;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  margin-top: 722px;
 }
 .jumbotron .scenery .grass .lake {
-  width: 340px;
-  position: absolute;
-  top: 0;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
+  width: 346px;
+  height: 96px;
+  margin-top: -1px;
 }
 .about-me {
   width: 100%;
