--- a/my-portfolio/src/Styles/less/jumbotron.less
+++ b/my-portfolio/src/Styles/less/jumbotron.less
@@ -18,18 +18,18 @@
         .mountains {
             display: flex;
             justify-content: center;
-            z-index: 5;
+            z-index: 1;
             margin-top: 160px;
 
             .mtns_left {
                 width: 990px;
-                height: 564px;
+                height: 594px;
                 padding-right: 170px;
             }
     
             .mtns_right {
                 width: 990px;
-                height: 564px;
+                height: 594px;
                 padding-left: 170px;
             }
         }
@@ -41,6 +41,7 @@
             margin-left: auto;
             margin-right: auto;
             width: 550px;
+            // z-index: 1;
         }
 
         .lt {
@@ -61,17 +62,15 @@
             width: 100%;
             height: 300px;
             background-color: #85AB36;
-            z-index: 1;
-            position: relative;
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            margin-top: 722px;
 
             .lake {
-                width: 340px;
-                position: absolute;
-                top: 0;
-                margin-left: auto;
-                margin-right: auto;
-                left: 0;
-                right: 0;
+                width: 346px;
+                height: 96px;
+                margin-top: -1px;
             }
         }
     } 
