--- a/my-portfolio/src/Styles/less/jumbotron.less
+++ b/my-portfolio/src/Styles/less/jumbotron.less
@@ -16,6 +16,24 @@
         position: relative;
         align-items: flex-start;
 
+        .air {
+            position: absolute;
+            width: 100%;
+
+            .sun {
+                height: 100px;
+                margin-top: 40px;
+                margin-left: 40px;
+            }
+
+            .clouds {
+
+                .cloud {
+                    height: 100px;
+                }
+            }
+        }
+
         .mountains {
             display: flex;
             justify-content: center;
