GSAP and react-transition-group added to prepare for animations on jumbotron

--- a/my-portfolio/src/Styles/css/index.css
+++ b/my-portfolio/src/Styles/css/index.css
@@ -38,8 +38,14 @@ code {
   margin-top: 40px;
   margin-left: 40px;
 }
+.jumbotron .scenery .air .clouds {
+  position: relative;
+}
 .jumbotron .scenery .air .clouds .cloud {
   height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .jumbotron .scenery .mountains {
   display: flex;
