--- a/my-portfolio/src/Styles/less/jumbotron.less
+++ b/my-portfolio/src/Styles/less/jumbotron.less
@@ -27,9 +27,13 @@
             }
 
             .clouds {
+                position: relative;
 
                 .cloud {
                     height: 100px;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
                 }
             }
         }
